--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                                 <p class="page__destaque__tag">Sale</p>
                             </div>
                         </div>
+                    
                         <p class="page__destaque__text">Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, 
                             deitado sem dormir, sentado sem cochilar e fazendo pose. 
-                            Nullam volutpat risus nec leo commodo, ut interdum diam laoreet.</p>
+                            Nullam volutpat risus nec le commodo, ut interdum diam laoreet.</p>
                     </div>
 
 
