--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <main>
                 <section class="page__carrossel">
     
-                        <div class="page__carrossel__left">
-                            <div class="page__carrossel__elipse-left">
+                        <div class="page__elipse">
+                            <div class="page__carrossel__elipse">
                                 <img src="./assets/icon-left.png" alt="page__carrossel__left-icon">
                             </div>
                         </div>
-                        <div class="page__carrossel_right">
-                            <div class="page__carrossel__elipse-right">
+                        <div class="page__elipse">
+                            <div class="page__carrossel__elipse">
                                 <img src="./assets/icon-right.png" alt="page__carrossel__right-icon">
                             </div>
                         </div>
@@ -39,7 +39,7 @@
 
                 <section class="page__destaque">
 
-                    <div class="page__destaque__left">
+                    <div class="page__destaque__content">
                         <img class="page__destaque__image" src="./assets/image-ambiente.png" alt="imagem ambiente">
                         <div class="page__destaque__pricing">
                             <p class="page__destaque__price">$ 1,200</p>
@@ -53,11 +53,11 @@
                               faiz malandris se pirulitá. Cevadis im ampola pa</p>
                     </div>
 
-                    <div class="page__destaque__right">
+                    <div class="page__destaque__content">
                         <img class="page__destaque__image" src="./assets/image-exterior.png" alt="imagem exterior">
                         <div class="page__destaque__pricing">
                             <p class="page__destaque__price">$ 2,000</p>
-                            <div class="page__destaque__rectangle">
+                            <div class="page__destaque__rectangle-right">
                                 <p class="page__destaque__tag">Sale</p>
                             </div>
                         </div>
@@ -67,6 +67,23 @@
                             Nullam volutpat risus nec le commodo, ut interdum diam laoreet.</p>
                     </div>
 
+
+                </section>
+
+                <section class="sections">
+                    <h2 class="sections_title">Your Style</h2>
+
+                    <div class="section__rectangle1">
+                        <p class="section__text">Industrial</p>
+                    </div>
+
+                    <div class="section__rectangle2">
+                        <p class="section__text">Modern</p>
+                    </div>
+
+                    <div class="section__rectangle3">
+                        <p class="section__text">Classic</p>
+                    </div>
 
                 </section>
         
